--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -744,6 +744,10 @@ td.celluleAssocCorCopie{
     opacity: .7;
 }
 
+/* MyCourses */
+.discDescriptionMyCourses{
+
+}
 
 /* documents */
 .documentsDisc:not([data-activated="1"]) .course-media,
