optimisation des requêtes

--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -196,25 +196,29 @@
                     size: 10
                 });
 
-            $('.btndesinscr').click(function () {
-                var idUser = $(this).closest('.userLine').attr('data-userId');
+            updatebtnbehaviors();
+            function updatebtnbehaviors(){
+                console.log('test')
+                $('.btndesinscr').unbind('click').click(function () {
+                    var idUser = $(this).closest('.userLine').attr('data-userId');
+                    $('.modal').modal('toggle');
+                    $('.mode').hide();
+                    $('.modeDesinscr').show();
+                    $('.valideDesinscr').unbind('click').click(function () {
+                        desinscrireUsers(typeItem, [idUser], "{{ item.id }}");
+                    });
+                });
+                $('.btninscr').unbind('click').click(function () {
+                    var idUser = $(this).closest('.userLine').attr('data-userId');
+                    $('.modal').modal('toggle');
+                    $('.mode').hide();
+                    $('.modeInscr').show();
+                    $('.valideInscr').unbind('click').click(function () {
+                        inscrireUsers(typeItem, [idUser], "{{ item.id }}", $('.selectRole').val());
+                    });
+                });
+            }
 
-                $('.modal').modal('toggle');
-                $('.mode').hide();
-                $('.modeDesinscr').show();
-                $('.valideDesinscr').unbind('click').click(function () {
-                    desinscrireUsers(typeItem, [idUser], "{{ item.id }}");
-                });
-            });
-            $('.btninscr').click(function () {
-                var idUser = $(this).closest('.userLine').attr('data-userId');
-                $('.modal').modal('toggle');
-                $('.mode').hide();
-                $('.modeInscr').show();
-                $('.valideInscr').unbind('click').click(function () {
-                    inscrireUsers(typeItem, [idUser], "{{ item.id }}", $('.selectRole').val());
-                });
-            });
             $('.selectAll').click(function (e) {
                 e.preventDefault();
                 var col = $(this).closest('.coloneTable');
@@ -480,21 +484,49 @@
                 }
             }
 
-            $('.loadNonInscrits').click(function(e){
-                e.preventDefault();
-                $('.loadNonInscrits').remove();
-                $.ajax({
-                    type: "POST",
-                    url: "{{ path('loadNonInscritsItem_ajax') }}",
-                    data: {
-                        idItem: id,
-                        typeItem: typeItem
-                    },
-                    dataType: "json",
-                    success: function (response) {
-
+            $('.loadNonInscrits').remove();
+            $.ajax({
+                type: "POST",
+                url: "{{ path('loadNonInscritsItem_ajax') }}",
+                data: {
+                    idItem: "{{ item.id }}",
+                    typeItem: typeItem,
+                    min: 10
+                },
+                dataType: "json",
+                success: function (response) {
+                    for(let i=0; i<response['usersNoHavingAccess'].length; i++){
+                        let user = jQuery.parseJSON(response['usersNoHavingAccess'][i]['user']);
+                        let userLink = '{{ path("user", {'id':'user_id' }) }}';
+                        userLink = userLink.replace("user_id", user.id);
+                        let row = '<tr class="userLine even" data-userid="'+user.id+'" role="row"><td><input class="selectUser" type="checkbox"></td><td><a href="'+userLink+'">'+user.id+'</a></td><td><a href="'+userLink+'">'+user.email+'</a></td><td>'+user.firstname+'</td><td>'+user.lastname+'</td><td>'+user.institut.nom+'</td><td>'+user.statut+'</td><td></td><td class="btnCellFilter"><i class="btninscr fa fa-sign-in" aria-hidden="true"></i></td></tr>';
+                        let $row = $(row);
+                        $('.tableNo').find('tbody').append($row)
+                            .trigger('addRows', [$row, true]);
                     }
-                });
+                    for(let i=0; i<response['usersHavingAccess'].length; i++){
+                        let datas = response['usersHavingAccess'][i];
+                        console.log(datas)
+                        let user = jQuery.parseJSON(datas['user']);
+                        let role = jQuery.parseJSON(datas['role']);
+                        let checkbox = '';
+                        let btnDesinscr = '';
+                        if(datas.isInscrit){
+                            checkbox = '<input class="selectUser" type="checkbox" />';
+                            btnDesinscr = '<i class="btndesinscr fa fa-sign-out" aria-hidden="true"></i>';
+                        }
+                        let userLink = '{{ path("user", {'id':'user_id' }) }}';
+                        userLink = userLink.replace("user_id", user.id);
+
+
+
+                        let row = '<tr class="userLine even" data-userid="'+user.id+'" role="row"><td>'+checkbox+'</td><td><a href="'+userLink+'">'+user.id+'</a></td><td><a href="'+userLink+'">'+user.email+'</a></td><td>'+user.firstname+'</td><td>'+user.lastname+'</td><td>'+user.institut.nom+'</td><td>'+user.statut+'</td><td>'+role.nom+'</td><td></td><td class="btnCellFilter">'+btnDesinscr+'</td></tr>';
+                        let $row = $(row);
+                        $('.tableYes').find('tbody').append($row)
+                            .trigger('addRows', [$row, true]);
+                    }
+                    updatebtnbehaviors();
+                }
             });
         });
     </script>
@@ -650,7 +682,7 @@
                                 <tr class="userLine" data-userId="{{ userId }}">
                                     <td>
                                         {% if user.isInscrit %}
-                                            <input class="selectUser" type="checkbox">
+                                            <input class="selectUser" type="checkbox" />
                                         {% endif %}
                                     </td>
                                     <td><a href="{{ path('user', {id:userId }) }}">{{ userId }}</a></td>
